--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -44,6 +44,7 @@
         <servlet-name>AccountDetailServlet</servlet-name>
         <servlet-class>controlller.AccountDetailServlet</servlet-class>
     </servlet>
+
     <servlet>
         <servlet-name>OvertimeListServlet</servlet-name>
         <servlet-class>controlller.OvertimeListServlet</servlet-class>
@@ -52,6 +53,67 @@
         <servlet-name>OvertimeDetailServlet</servlet-name>
         <servlet-class>controlller.OvertimeDetailServlet</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>DropDownServlet</servlet-name>
+        <servlet-class>controlller.DropDownServlet</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>DayLeavePendingServlet</servlet-name>
+        <servlet-class>controlller.DayLeavePendingServlet</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>UpdateApproveServlet</servlet-name>
+        <servlet-class>controlller.UpdateApproveServlet</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>DayLeaveServlet</servlet-name>
+        <servlet-class>controlller.DayLeaveServlet</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>DayLeaveRejectServlet</servlet-name>
+        <servlet-class>controlller.DayLeaveRejectServlet</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>UpdateRejectServlet</servlet-name>
+        <servlet-class>controlller.UpdateRejectServlet</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>SentDayLeaveServlet</servlet-name>
+        <servlet-class>controlller.SentDayLeaveServlet</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>UserInfoServlet</servlet-name>
+        <servlet-class>controlller.UserInfoServlet</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>ReportServlet</servlet-name>
+        <servlet-class>controlller.ReportServlet</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>ViewReportServlet</servlet-name>
+        <servlet-class>controlller.ViewReportServlet</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>PendingApplicantServlet</servlet-name>
+        <servlet-class>controlller.PendingApplicantServlet</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>MainController</servlet-name>
+        <servlet-class>controlller.MainController</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>PassApplicantServlet</servlet-name>
+        <servlet-class>controlller.PassApplicantServlet</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>RejectApplicantServlet</servlet-name>
+        <servlet-class>controlller.RejectApplicantServlet</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>ApplyApplicantServlet</servlet-name>
+        <servlet-class>controlller.ApplyApplicantServlet</servlet-class>
+    </servlet>
+
     <servlet-mapping>
         <servlet-name>DispatchServlet</servlet-name>
         <url-pattern>/DispatchServlet</url-pattern>
@@ -96,6 +158,7 @@
         <servlet-name>AccountDetailServlet</servlet-name>
         <url-pattern>/AccountDetailServlet</url-pattern>
     </servlet-mapping>
+
     <servlet-mapping>
         <servlet-name>OvertimeListServlet</servlet-name>
         <url-pattern>/OvertimeListServlet</url-pattern>
@@ -104,6 +167,67 @@
         <servlet-name>OvertimeDetailServlet</servlet-name>
         <url-pattern>/OvertimeDetailServlet</url-pattern>
     </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>DropDownServlet</servlet-name>
+        <url-pattern>/DropDownServlet</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>DayLeavePendingServlet</servlet-name>
+        <url-pattern>/DayLeavePendingServlet</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>UpdateApproveServlet</servlet-name>
+        <url-pattern>/UpdateApproveServlet</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>DayLeaveServlet</servlet-name>
+        <url-pattern>/DayLeaveServlet</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>DayLeaveRejectServlet</servlet-name>
+        <url-pattern>/DayLeaveRejectServlet</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>UpdateRejectServlet</servlet-name>
+        <url-pattern>/UpdateRejectServlet</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>SentDayLeaveServlet</servlet-name>
+        <url-pattern>/SentDayLeaveServlet</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>UserInfoServlet</servlet-name>
+        <url-pattern>/UserInfoServlet</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>ReportServlet</servlet-name>
+        <url-pattern>/ReportServlet</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>ViewReportServlet</servlet-name>
+        <url-pattern>/ViewReportServlet</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>PendingApplicantServlet</servlet-name>
+        <url-pattern>/PendingApplicantServlet</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>MainController</servlet-name>
+        <url-pattern>/MainController</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>PassApplicantServlet</servlet-name>
+        <url-pattern>/PassApplicantServlet</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>RejectApplicantServlet</servlet-name>
+        <url-pattern>/RejectApplicantServlet</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>ApplyApplicantServlet</servlet-name>
+        <url-pattern>/ApplyApplicantServlet</url-pattern>
+    </servlet-mapping>
+
     <session-config>
         <session-timeout>
             30
