--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -44,7 +44,6 @@
         <servlet-name>AccountDetailServlet</servlet-name>
         <servlet-class>controlller.AccountDetailServlet</servlet-class>
     </servlet>
-<<<<<<< HEAD
     <servlet>
         <servlet-name>OvertimeListServlet</servlet-name>
         <servlet-class>controlller.OvertimeListServlet</servlet-class>
@@ -113,9 +112,10 @@
         <servlet-name>ApplyApplicantServlet</servlet-name>
         <servlet-class>controlller.ApplyApplicantServlet</servlet-class>
     </servlet>
-=======
-    
->>>>>>> f81c58245a5195342f9085087b1d4d6e6836ff2d
+    <servlet>
+        <servlet-name>UpdateUserInfoServlet</servlet-name>
+        <servlet-class>controlller.UpdateUserInfoServlet</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>DispatchServlet</servlet-name>
         <url-pattern>/DispatchServlet</url-pattern>
@@ -160,7 +160,6 @@
         <servlet-name>AccountDetailServlet</servlet-name>
         <url-pattern>/AccountDetailServlet</url-pattern>
     </servlet-mapping>
-<<<<<<< HEAD
     <servlet-mapping>
         <servlet-name>OvertimeListServlet</servlet-name>
         <url-pattern>/OvertimeListServlet</url-pattern>
@@ -229,9 +228,10 @@
         <servlet-name>ApplyApplicantServlet</servlet-name>
         <url-pattern>/ApplyApplicantServlet</url-pattern>
     </servlet-mapping>
-=======
-  
->>>>>>> f81c58245a5195342f9085087b1d4d6e6836ff2d
+    <servlet-mapping>
+        <servlet-name>UpdateUserInfoServlet</servlet-name>
+        <url-pattern>/UpdateUserInfoServlet</url-pattern>
+    </servlet-mapping>
     <session-config>
         <session-timeout>
             30
