--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -33,10 +33,6 @@
         <servlet-class>controlller.DeleteStaffDetailServlet</servlet-class>
     </servlet>
     <servlet>
-        <servlet-name>CreateDayLeaveServlet</servlet-name>
-        <servlet-class>controlller.CreateDayLeaveServlet</servlet-class>
-    </servlet>
-    <servlet>
         <servlet-name>AccountListServlet</servlet-name>
         <servlet-class>controlller.AccountListServlet</servlet-class>
     </servlet>
@@ -44,7 +40,6 @@
         <servlet-name>AccountDetailServlet</servlet-name>
         <servlet-class>controlller.AccountDetailServlet</servlet-class>
     </servlet>
-
     <servlet>
         <servlet-name>OvertimeListServlet</servlet-name>
         <servlet-class>controlller.OvertimeListServlet</servlet-class>
@@ -113,12 +108,18 @@
         <servlet-name>ApplyApplicantServlet</servlet-name>
         <servlet-class>controlller.ApplyApplicantServlet</servlet-class>
     </servlet>
-
     <servlet>
         <servlet-name>UpdateUserInfoServlet</servlet-name>
         <servlet-class>controlller.UpdateUserInfoServlet</servlet-class>
     </servlet>
-
+    <servlet>
+        <servlet-name>CreateDayLeaveServlet</servlet-name>
+        <servlet-class>controlller.CreateDayLeaveServlet</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>CreateHrApplicationServlet</servlet-name>
+        <servlet-class>controlller.CreateHrApplicationServlet</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>DispatchServlet</servlet-name>
         <url-pattern>/DispatchServlet</url-pattern>
@@ -152,10 +153,6 @@
         <url-pattern>/DeleteStaffDetailServlet</url-pattern>
     </servlet-mapping>
     <servlet-mapping>
-        <servlet-name>CreateDayLeaveServlet</servlet-name>
-        <url-pattern>/CreateDayLeaveServlet</url-pattern>
-    </servlet-mapping>
-    <servlet-mapping>
         <servlet-name>AccountListServlet</servlet-name>
         <url-pattern>/AccountListServlet</url-pattern>
     </servlet-mapping>
@@ -163,7 +160,6 @@
         <servlet-name>AccountDetailServlet</servlet-name>
         <url-pattern>/AccountDetailServlet</url-pattern>
     </servlet-mapping>
-
     <servlet-mapping>
         <servlet-name>OvertimeListServlet</servlet-name>
         <url-pattern>/OvertimeListServlet</url-pattern>
@@ -232,12 +228,18 @@
         <servlet-name>ApplyApplicantServlet</servlet-name>
         <url-pattern>/ApplyApplicantServlet</url-pattern>
     </servlet-mapping>
-
     <servlet-mapping>
         <servlet-name>UpdateUserInfoServlet</servlet-name>
         <url-pattern>/UpdateUserInfoServlet</url-pattern>
     </servlet-mapping>
-
+    <servlet-mapping>
+        <servlet-name>CreateDayLeaveServlet</servlet-name>
+        <url-pattern>/CreateDayLeaveServlet</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>CreateHrApplicationServlet</servlet-name>
+        <url-pattern>/CreateHrApplicationServlet</url-pattern>
+    </servlet-mapping>
     <session-config>
         <session-timeout>
             30
